test/spec_vectors/global/fail/module_10.wat
(module (global i32 (nop)))